# sentinel-flight

./: .gitignore  LICENSE  README.md  conftest.py  requirements.txt
dashboard/: README.md
docs/: architecture.md  demo_scenarios.md  resume_bullets.md  roadmap.md  safety_layer.md
docs/evidence/: phase3_analysis_output.txt  phase3_mission_sample.csv  phase4_analysis_output.txt  phase4_mission_sample.csv  phase5_analysis_output.txt  phase5_mission_sample.csv
models/landing_pad_detector/: README.md
models/obstacle_detector/: README.md
ros2_ws/src/sentinel_flight_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/sentinel_flight_control/launch/: mission.launch.py
ros2_ws/src/sentinel_flight_control/sentinel_flight_control/: mission_manager.py  mission_manager_node.py  offboard_controller.py  ros_interfaces.py  safety_gate.py  safety_gate_node.py
ros2_ws/src/sentinel_flight_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/sentinel_flight_msgs/msg/: PerceptionStatus.msg  SafetyEvent.msg  Setpoint.msg
ros2_ws/src/sentinel_flight_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/sentinel_flight_perception/sentinel_flight_perception/: landing_pad_detector.py  landing_pad_detector_node.py
ros2_ws/src/sentinel_flight_telemetry/: package.xml  setup.cfg  setup.py
ros2_ws/src/sentinel_flight_telemetry/sentinel_flight_telemetry/: telemetry_logger.py  telemetry_logger_node.py
scripts/: analyze_logs.py  launch_sim.sh  run_mission.sh
tests/: test_landing_pad_detector.py  test_mission_manager.py  test_safety_gate.py  test_telemetry_logger.py
