<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sentinel_flight_msgs</name>
  <version>0.1.0</version>
  <description>Custom ROS 2 interfaces (Setpoint, SafetyEvent) shared between SentinelFlight's mission planner, safety gate, offboard controller, and telemetry logger nodes.</description>
  <maintainer email="pribapu@gmail.com">Prithu Bapu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
