<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sentinel_flight_perception</name>
  <version>0.1.0</version>
  <description>Edge AI perception (landing-pad / obstacle detection) for SentinelFlight.</description>
  <maintainer email="pribapu@gmail.com">Prithu Bapu</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
